--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
 
   api:
     build: ./shop-backend
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     restart: always
     ports:
       - "4322:4200"
