--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,19 +2,8 @@ version: "3"
 
 services:
 
-  frontend:
-    build: ./shop-frontend
-    restart: always
-    ports:
-      - "4321:80"
-    depends_on:
-      - api
-    links:
-      - "api:backend"
-
-
   api:
-    build: ./shop-backend
+    build: .
     extra_hosts:
       - "host.docker.internal:host-gateway"
     restart: always
