--- a/shop-frontend/Dockerfile
+++ b/shop-frontend/Dockerfile
@@ -7,6 +7,8 @@ RUN npm install && npm run build-prod
 
 FROM nginx:alpine
 
+COPY default.conf /etc/nginx/conf.d/default.conf
+
 WORKDIR /usr/share/nginx/html
 
 RUN rm -rf ./*
